[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/ingame/stage/minigame2/fighters/minion.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ingame/stage/minigame 2/minion_sprite.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ingame/stage/minigame 2/juiz.png" type="Texture" id=7]
[ext_resource path="res://src/ingame/stage/minigame2/fighters/juiz.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10, 9.5 )

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Juiz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=18]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Juiz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 4 ]
}

[sub_resource type="Animation" id=19]
resource_name = "leavin"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Juiz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 5, 2, 8 ]
}

[sub_resource type="Animation" id=20]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Juiz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 0, 6 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MinionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "atacando"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("MinionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=23]
resource_name = "desmaio"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("MinionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22 ]
}

[sub_resource type="Animation" id=22]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MinionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=15]
resource_name = "levantando"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("MinionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 16, 17, 18, 19 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 11.5 )

[node name="minion" type="Area2D"]
z_index = 1
collision_layer = 32
script = ExtResource( 2 )

[node name="juiz" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 32
script = ExtResource( 9 )

[node name="colisao" type="CollisionShape2D" parent="juiz"]
shape = SubResource( 16 )

[node name="Juiz" type="Sprite" parent="juiz"]
position = Vector2( -2, -6 )
texture = ExtResource( 7 )
hframes = 3
vframes = 3
frame = 1

[node name="animation" type="AnimationPlayer" parent="juiz"]
anims/RESET = SubResource( 17 )
anims/idle = SubResource( 18 )
anims/leavin = SubResource( 19 )
anims/walk = SubResource( 20 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="juiz"]
scale = Vector2( 0.1875, 0.2 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/atacando = SubResource( 21 )
anims/desmaio = SubResource( 23 )
anims/idle = SubResource( 22 )
anims/levantando = SubResource( 15 )

[node name="MinionSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 4
vframes = 6

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 10 )

[node name="ataque-delay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer" type="Timer" parent="."]

[node name="recover-time" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="invoca_BANANA" type="Timer" parent="."]
pause_mode = 1
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_minion_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_minion_body_exited"]
[connection signal="nocateado" from="." to="juiz" method="_on_minion_nocateado"]
[connection signal="pegou" from="juiz" to="." method="_on_juiz_pegou"]
[connection signal="screen_exited" from="juiz/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ataque-delay" to="." method="_on_ataquedelay_timeout"]
[connection signal="timeout" from="recover-time" to="." method="_on_recovertime_timeout"]
[connection signal="timeout" from="invoca_BANANA" to="." method="_on_invoca_BANANA_timeout"]
